--- a/Project/.settings/org.eclipse.core.resources.prefs
+++ b/Project/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
+encoding//src/main/java/allkeyboard/util/CertHelper.java=UTF-8
 encoding//src/main/java/ateam/db/DBManager.java=UTF-8
