--- a/Project/.settings/org.eclipse.core.resources.prefs
+++ b/Project/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//src/main/java/allkeyboard/util/CertHelper.java=UTF-8
+encoding//src/main/java/allkeyboard/vo/PagingVO.java=UTF-8
 encoding//src/main/java/ateam/db/DBManager.java=UTF-8
