상품등록 수정중
1.list 주석화
2.add 자바스크립트 수정
3.addOk 파일 업로드 수정중

--- a/Project/.settings/org.eclipse.core.resources.prefs
+++ b/Project/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
 encoding//src/main/java/allkeyboard/util/CertHelper.java=UTF-8
 encoding//src/main/java/allkeyboard/vo/PagingVO.java=UTF-8
+encoding//src/main/java/allkeyboard/vo/ProductAttach.java=UTF-8
 encoding//src/main/java/ateam/db/DBManager.java=UTF-8
